k8s/delpoyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-deployment
  labels:
    app: weather
spec:
  replicas: 3
  selector:
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
      - name: weather
        image: weather-test:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dice-deployment
  labels:
    app: dice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dice
  template:
    metadata:
      labels:
        app: dice
    spec:
      containers:
      - name: dice
        image: dice-test:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
