k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather
  labels:
    app: weather
spec:
  replicas: 3
  selector:
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
      - name: weather
        image: localhost:5001/weather-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dice
  labels:
    app: dice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dice
  template:
    metadata:
      labels:
        app: dice
    spec:
      containers:
      - name: dice
        image: localhost:5001/dice-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
