k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-service
spec:
  selector:
    app: weather
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dice-service
spec:
  selector:
    app: dice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pod-metadata-service
spec:
  selector:
    app: pod-metadata
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
