k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: weather.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weather-service
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dice-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: dice.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dice-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pod-metadata-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: pod-metadata.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pod-metadata-service
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dogs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: dogs.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dogs-service
                port:
                  number: 80
